@@ -1,0 +1,5 @@
+explain
+select * from src sort by key limit 10;
+
+
+select * from src sort by key limit 10;
